--- a/php/src/styles.css
+++ b/php/src/styles.css
@@ -1,12 +1,75 @@
 * {
-    margin: 0 auto;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #121212;
+    color: #f0f0f0;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
     text-align: center;
 }
-body {
-    background-color: black;
+
+h1 {
+    color: #ffcc00;
+    margin: 20px 0;
+    font-size: 2rem;
 }
+
+form {
+    background-color: #333333;
+    padding: 20px;
+    border-radius: 10px;
+    width: 600px;
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+    color: #ffcc00;
+}
+
+input[type="text"], select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #555;
+    border-radius: 5px;
+    background-color: #222;
+    color: #fff;
+}
+
+input[type="submit"] {
+    background-color: #ff5722;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+input[type="submit"] {
+    background-color: #ffcc00;
+    color: #333333;
+    border: none;
+    padding: 8px 17px;
+    border-radius: 5px;
+}
+
+input[type="submit"]:hover {
+    background-color: #e64a19;
+}
+
 table {
-    border-collapse: collapse;
+    border-collapse: separate;
+    border-spacing: 10px;
     margin: 20px auto;
 }
 
@@ -14,33 +77,24 @@ td {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: 10px dotted black;
-    /* Cercle amb punts blancs */
-    background-color: white;
-    /* Fons negre o pot ser un altre color */
-    display: inline-block;
-    margin: 10px;
+    background-color: #222;
     color: black;
     font-size: 2rem;
     text-align: center;
     vertical-align: middle;
-}
-input {
-    background-color: black;
-    color: white;
-    border: 1px solid white;
-    border-radius: 10px;
-    padding: 6px 12px;
-}
-input:hover {
-    background-color: white;
-    color: black;
-    transition: all 0.5s ease;
+    border: 5px solid #444;
 }
 
-.buid {
-    background-color: black;
-    /* Color blanc per cercles buits */
-    border-color: white;
-    /* Puntes negres per millor visibilitat */
+td.buid {
+    background-color: #121212;
+    border: 5px dashed #444;
+}
+
+.panel {
+    background-color: #333;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    margin-top: 20px;
+    color: #ffcc00;
 }
