--- a/php/src/styles.css
+++ b/php/src/styles.css
@@ -3,74 +3,71 @@
     padding: 0;
     box-sizing: border-box;
 }
-.incorrect {
-    color: red;
+
+:root {
+    --color-gris-oscuro: #272727;
+    --color-rosa: #bf4ae2;
+    --color-azul: #3bb2e9;
+    --color-gris-clarito: #333333;
 }
+
 body {
-    background-color: #121212;
-    color: #f0f0f0;
-    font-family: Arial, sans-serif;
+    background-color: var(--color-gris-oscuro);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
     text-align: center;
 }
 
 h1 {
-    color: #ffcc00;
-    margin: 20px 0;
-    font-size: 2rem;
+    color: var(--color-rosa);
+    margin-top: 200px;
+    margin-bottom: -135px;
 }
 
 form {
-    background-color: #333333;
+    margin-top:150px;
+    background-color: var(--color-gris-clarito);
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 5px;
     width: 600px;
 }
 
 label {
     display: block;
     margin-bottom: 8px;
-    color: #ffcc00;
+    color: var(--color-azul);
 }
 
 input[type="text"], select {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid #555;
+    border: 1px solid var(--color-azul);
     border-radius: 5px;
-    background-color: #222;
-    color: #fff;
+    color: var(--color-rosa);
+    background-color: var(--color-gris-clarito);
 }
 
 input[type="submit"] {
-    background-color: #ff5722;
-    color: #fff;
-    border: none;
+    background-color: var(--color-azul);
+    color: var(--color-rosa);
+    border: 1px solid var(--color-rosa);
     padding: 10px 20px;
     border-radius: 5px;
-    cursor: pointer;
+    font-weight: bold;
     transition: background-color 0.3s ease;
 }
 
-input[type="submit"] {
-    background-color: #ffcc00;
-    color: #333333;
-    border: none;
-    padding: 8px 17px;
-    border-radius: 5px;
-}
-
 input[type="submit"]:hover {
-    background-color: #e64a19;
+    background-color: var(--color-rosa);
+    color: var(--color-azul);
+    border: 1px solid var(--color-azul);
 }
 
 table {
-    border-collapse: separate;
     border-spacing: 10px;
     margin: 20px auto;
 }
@@ -79,24 +76,9 @@ td {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #222;
-    color: black;
-    font-size: 2rem;
-    text-align: center;
-    vertical-align: middle;
-    border: 5px solid #444;
+    background-color: var(--color-gris-clarito);
 }
 
-td.buid {
-    background-color: #121212;
-    border: 5px dashed #444;
-}
-
-.panel {
-    background-color: #333;
-    padding: 15px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    margin-top: 20px;
-    color: #ffcc00;
+.buid {
+    background-color: var(--color-gris-oscuro);
 }
