--- a/php/src/styles.css
+++ b/php/src/styles.css
@@ -23,12 +23,10 @@ body {
 
 h1 {
     color: var(--color-rosa);
-    margin-top: 200px;
-    margin-bottom: -135px;
 }
 
 form {
-    margin-top:150px;
+    margin-top: 120px;
     background-color: var(--color-gris-clarito);
     padding: 20px;
     border-radius: 5px;
@@ -81,4 +79,13 @@ td {
 
 .buid {
     background-color: var(--color-gris-oscuro);
+}
+
+.incorrect {
+    color: red;
+}
+
+.formTitulo {
+    margin-top: 180px;
+    margin-bottom: -115px;
 }
